fix weird word-breaks on mobile.

--- a/stadsarkiv_client/static/css/record.css
+++ b/stadsarkiv_client/static/css/record.css
@@ -100,6 +100,7 @@ h3.record-header {
     margin: 0;
     padding-bottom: 5px;
     word-break: break-word;
+    width: 100%;
 }
 
 .record-content>.content>p.spacing {
